--- a/FilmWebAPI/FilmWebAPI/FilmWebAPI.csproj
+++ b/FilmWebAPI/FilmWebAPI/FilmWebAPI.csproj
@@ -1,6 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <Authors>Sunnyline</Authors>
+    <Company />
+    <Product>FilmWeb API</Product>
+    <Description>Nieoficjanlny klient FilmWeb API</Description>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
