--- a/FilmWebAPI/FilmWebAPI/FilmWebAPI.csproj
+++ b/FilmWebAPI/FilmWebAPI/FilmWebAPI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
